Ajustes no Html

--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -78,7 +78,7 @@
                 <mat-divider></mat-divider>
 
                 <button (click)="editar()" [disabled]="!validaCampos()" mat-raised-button color="primary">Enviar</button>
-                <button routerLink="../" mat-button color="warn">Cancelar</button>
+                <button routerLink="../../" mat-button color="warn">Cancelar</button>
             </section>
         </form>
     </div>
