--- a/src/app/components/chamado/chamado-create/chamado-create.component.html
+++ b/src/app/components/chamado/chamado-create/chamado-create.component.html
@@ -35,7 +35,7 @@
                 
                 <div class="status-prioridade">
                     <mat-form-field appearance="outline">
-                        <mat-label>Status do chamado</mat-label>
+                        <mat-label>Status</mat-label>
                         <mat-select
                             [(ngModel)]="chamado.status"
                             name="status"
@@ -48,7 +48,7 @@
                     </mat-form-field>
 
                     <mat-form-field appearance="outline">
-                        <mat-label>Prioridade do chamado</mat-label>
+                        <mat-label>Prioridade</mat-label>
                         <mat-select
                             [(ngModel)]="chamado.prioridade"
                             name="prioridade"
