--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,7 +18,7 @@
                 <i class="material-icons">description</i>
                 Chamados
             </a>
-            <a mat-list-item routerLink="/">
+            <a mat-list-item href="https://github.com/gabrielgua/helpdesk-front" target="_blank">
                 <i class="material-icons">code</i>
                 GitHub
             </a>
