--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -19,7 +19,7 @@
     </mat-radio-group>
 
     <div class="mat-elevation-z8 container-table">
-      <table mat-table matSort [dataSource]="dataSource">
+      <table mat-table [dataSource]="dataSource" matSort matSortActive="id" matSortDirection="desc" matSortDisableClear>
     
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> #. </th>
@@ -27,7 +27,7 @@
         </ng-container>
     
         <ng-container matColumnDef="titulo">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Titulo </th>
+          <th mat-header-cell *matHeaderCellDef> Titulo </th>
           <td mat-cell *matCellDef="let chamado"> {{chamado.titulo}} </td>
         </ng-container>
     
