--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
   
   <div class="mat-elevation-z8 container-table">
-    <table mat-table matSort [dataSource]="dataSource">
+    <table mat-table [dataSource]="dataSource" matSort matSortActive="id" matSortDirection="desc" matSortDisableClear>
   
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> #. </th>
@@ -19,7 +19,7 @@
       </ng-container>
   
       <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Nome </th>
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let tecnico"> {{tecnico.nome}} </td>
       </ng-container>
   
