ajustes nas datas de abertura e conclusao dos chamados

--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -29,7 +29,7 @@
     
                 <mat-form-field appearance="outline" >
                     <mat-label>Data Fechamento</mat-label>
-                    <input type="text" matInput [value]="data.dataFechamento" disabled>
+                    <input type="text" matInput [value]="data.dataConclusao" disabled>
                     <mat-icon color="primary" matSuffix>calendar_month</mat-icon>
                 </mat-form-field>
 
