ajustes nas datas pt2

--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -28,7 +28,7 @@
                 </mat-form-field>
     
                 <mat-form-field appearance="outline" >
-                    <mat-label>Data Fechamento</mat-label>
+                    <mat-label>Data Conclusão</mat-label>
                     <input type="text" matInput [value]="data.dataConclusao" disabled>
                     <mat-icon color="primary" matSuffix>calendar_month</mat-icon>
                 </mat-form-field>
