ajustes no nav para o repositório do github frontend e backend

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -23,3 +23,8 @@
     color: white;
     background-color: #2196f3;
 }
+
+.menuGit {
+    margin-left: 1.75rem;
+    border-left: 1px solid #2196f3;
+}
